--- a/source/_posts/dubbo/集群容错.md
+++ b/source/_posts/dubbo/集群容错.md
@@ -1,9 +1,7 @@
 ---
-title: 集群容错 cluster
+title: dubbo 集群容错
 ---
-
----------------
-
+接口定义
 ```java
 public interface Cluster {
 
@@ -12,7 +10,6 @@ public interface Cluster {
      */
     @Adaptive
     <T> Invoker<T> join(Directory<T> directory) throws RpcException;
-
 }
 ```
 
