--- a/source/_posts/dubbo/集群容错.md
+++ b/source/_posts/dubbo/集群容错.md
@@ -1,39 +1,39 @@
 ---
 title: dubbo 集群容错
 ---
-接口定义
-```java
-public interface Cluster {
+# 接口定义
+    ```java
+    public interface Cluster {
 
-    /**
-     * Merge the directory invokers to a virtual invoker.
-     */
-    @Adaptive
-    <T> Invoker<T> join(Directory<T> directory) throws RpcException;
-}
-```
+        /**
+         * Merge the directory invokers to a virtual invoker.
+         */
+        @Adaptive
+        <T> Invoker<T> join(Directory<T> directory) throws RpcException;
+    }
+    ```
 
 - `Invoker`是Provider的一个可调用`Service`的抽象，`Invoker`封装了`Provider`的地址及`Service`的接口信息
 
 - `Directory`代表多个`Invoker`，可以看做`List<Invoker>`，但与`List`不同的是，它的值是动态变化的，比如注册中心推送
 
-  ```java
-  public interface Directory<T> extends Node {
+    ```java
+    public interface Directory<T> extends Node {
       Class<T> getInterface();
       List<Invoker<T>> list(Invocation invocation) throws RpcException;
-  }
-  ```
+    }
+    ```
 
 - `Cluster`把`Directory`中的多个`Invoker`伪装成一个`Invoker`（即join方法），对上层透明，具体容错逻辑在返回的`Invoker`中实现，如下`FailbackCluster`的实现，
 
-  ```java
-  public class FailbackCluster implements Cluster {
+    ```java
+    public class FailbackCluster implements Cluster {
       @Override
       public <T> Invoker<T> join(Directory<T> directory) throws RpcException {
           return new FailbackClusterInvoker<T>(directory);
       }
-  }
-  ```
+    }
+    ```
 
 - `Router`顾名思义负责从多个`Invoker`按路由规则选择子集
 - `LoadBalance`负责从多个`Invoker`中选择用于调用的`Invoker`
@@ -44,16 +44,16 @@ public interface Cluster {
 
 - #### Failover Cluster 失败重试，默认，retries次数不包含第一次
 
-  ```xml
-  <!-- provider -->
-  <dubbo:service retries="2" />
-  <!-- consumer -->
-  <dubbo:reference retries="2" />
-  <!-- 方法级别 -->
-  <dubbo:reference>
-  	<dubbo:method name="foo" retries="2" />
-  </dubbo:reference>
-  ```
+    ```xml
+    <!-- provider -->
+    <dubbo:service retries="2" />
+    <!-- consumer -->
+    <dubbo:reference retries="2" />
+    <!-- 方法级别 -->
+    <dubbo:reference>
+    <dubbo:method name="foo" retries="2" />
+    </dubbo:reference>
+    ```
 
 - Failfast Cluster 
 
